--- a/packages/starbook/package.json
+++ b/packages/starbook/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "exports": {
     ".": "./index.ts",
+    "./schema": "./schema.ts",
     "./index.astro": "./index.astro"
   },
   "peerDependencies": {
