--- a/packages/starbook/package.json
+++ b/packages/starbook/package.json
@@ -25,7 +25,13 @@
     "astro": "^2.1.7"
   },
   "dependencies": {
+    "@types/mdast": "^3.0.11",
     "bcp-47": "^2.1.0",
-    "pagefind": "^0.12.0"
+    "hastscript": "^7.2.0",
+    "pagefind": "^0.12.0",
+    "remark-directive": "^2.0.1",
+    "unified": "^10.1.2",
+    "unist-util-remove": "^3.1.1",
+    "unist-util-visit": "^4.1.2"
   }
 }
