--- a/packages/starbook/package.json
+++ b/packages/starbook/package.json
@@ -26,6 +26,7 @@
     "astro": "^2.1.7"
   },
   "dependencies": {
+    "@pagefind/default-ui": "^0.12.0",
     "@types/mdast": "^3.0.11",
     "bcp-47": "^2.1.0",
     "execa": "^7.1.1",
