--- a/packages/starbook/package.json
+++ b/packages/starbook/package.json
@@ -16,6 +16,7 @@
     ".": "./index.ts",
     "./schema": "./schema.ts",
     "./types": "./types.ts",
+    "./pagefind.ts": "./pagefind.ts",
     "./index.astro": "./index.astro"
   },
   "peerDependencies": {
@@ -26,12 +27,13 @@
     "astro": "^2.1.7"
   },
   "dependencies": {
+    "@astrojs/markdown-remark": "^2.1.3",
     "@pagefind/default-ui": "^0.12.0",
     "@types/mdast": "^3.0.11",
     "bcp-47": "^2.1.0",
     "execa": "^7.1.1",
     "hastscript": "^7.2.0",
-    "pagefind": "^0.12.0",
+    "pagefind": "1.0.0-alpha.4",
     "remark-directive": "^2.0.1",
     "unified": "^10.1.2",
     "unist-util-remove": "^3.1.1",
