Add basic injected 404 route

--- a/packages/starbook/package.json
+++ b/packages/starbook/package.json
@@ -16,7 +16,8 @@
     ".": "./index.ts",
     "./schema": "./schema.ts",
     "./types": "./types.ts",
-    "./index.astro": "./index.astro"
+    "./index.astro": "./index.astro",
+    "./404.astro": "./404.astro"
   },
   "peerDependencies": {
     "astro": "^2"
