--- a/packages/starbook/package.json
+++ b/packages/starbook/package.json
@@ -27,6 +27,7 @@
     "astro": "^2.1.7"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.19.0",
     "@pagefind/default-ui": "^0.12.0",
     "@types/mdast": "^3.0.11",
     "bcp-47": "^2.1.0",
