Rename the main package to `@astrojs/starlight`

--- a/packages/starlight/package.json
+++ b/packages/starlight/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starlight",
+  "name": "@astrojs/starlight",
   "version": "0.0.0",
   "description": "Build beautiful, high-performance documentation websites with Astro",
   "scripts": {},
