--- a/docs/package.json
+++ b/docs/package.json
@@ -11,7 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.1.7",
-    "starlight": "workspace:*"
+    "@astrojs/starlight": "workspace:*",
+    "astro": "^2.1.7"
   }
 }
