Ignore docs site in changesets

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -5,10 +5,9 @@
     { "repo": "withastro/starlight" }
   ],
   "commit": false,
-  "fixed": [],
   "linked": [],
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": []
+  "ignore": ["starlight-docs"]
 }
