--- a/docs/package.json
+++ b/docs/package.json
@@ -4,6 +4,8 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
+    "test": "start-server-and-test preview http://localhost:3000 pa11y",
+    "pa11y": "pa11y-ci --sitemap 'http://localhost:3000/sitemap-index.xml' --sitemap-find 'https://starlight.astro.build' --sitemap-replace 'http://localhost:3000'",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
@@ -13,5 +15,9 @@
   "dependencies": {
     "@astrojs/starlight": "workspace:*",
     "astro": "^2.4.3"
+  },
+  "devDependencies": {
+    "pa11y-ci": "^3.0.1",
+    "start-server-and-test": "^2.0.0"
   }
 }
