Specify custom `script` to run `size-limit`

--- a/.github/workflows/size-limit.yml
+++ b/.github/workflows/size-limit.yml
@@ -26,3 +26,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           directory: docs/
           package_manager: pnpm
+          script: pnpm size --json
