--- a/docs/package.json
+++ b/docs/package.json
@@ -18,7 +18,7 @@
     "astro": "^2.4.3"
   },
   "devDependencies": {
-    "@size-limit/preset-app": "^8.2.4",
+    "@size-limit/file": "^8.2.4",
     "pa11y-ci": "^3.0.1",
     "size-limit": "^8.2.4",
     "start-server-and-test": "^2.0.0"
@@ -27,19 +27,17 @@
     {
       "name": "/index.html",
       "path": "dist/index.html",
-      "limit": "350 ms",
-      "running": false
+      "limit": "13 kB"
     },
     {
       "name": "/_astro/*.js",
       "path": "dist/_astro/*.js",
-      "limit": "750 ms"
+      "limit": "20 kB"
     },
     {
       "name": "/_astro/*.css",
       "path": "dist/_astro/*.css",
-      "limit": "250 ms",
-      "running": false
+      "limit": "11 kB"
     }
   ]
 }
