--- a/.github/workflows/size-limit.yml
+++ b/.github/workflows/size-limit.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Run size-limit
         uses: andresz1/size-limit-action@dd31dce7dcc72a041fd3e49abf0502b13fc4ce05
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.FREDKBOT_GITHUB_TOKEN }}
           directory: docs/
           package_manager: pnpm
