--- a/packages/starlight/package.json
+++ b/packages/starlight/package.json
@@ -37,12 +37,12 @@
   "dependencies": {
     "@astrojs/mdx": "^0.19.1",
     "@astrojs/sitemap": "^1.3.1",
-    "@pagefind/default-ui": "^0.12.0",
+    "@pagefind/default-ui": "^1.0.0-alpha.5",
     "@types/mdast": "^3.0.11",
     "bcp-47": "^2.1.0",
     "execa": "^7.1.1",
     "hastscript": "^7.2.0",
-    "pagefind": "^0.12.0",
+    "pagefind": "^1.0.0-alpha.5",
     "rehype": "^12.0.1",
     "remark-directive": "^2.0.1",
     "unified": "^10.1.2",
