Don’t use landing page customisations in a11y tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Build docs site
         working-directory: ./docs
         run: pnpm build
+        env:
+          NO_GRADIENTS: true
 
       - name: Run accessibility audit
         working-directory: ./docs
