--- a/docs/package.json
+++ b/docs/package.json
@@ -19,9 +19,14 @@
   },
   "devDependencies": {
     "@size-limit/file": "^8.2.4",
+    "hast-util-from-html": "^1.0.2",
+    "hast-util-to-string": "^2.0.0",
+    "hastscript": "^7.2.0",
     "pa11y-ci": "^3.0.1",
+    "rehype": "^12.0.1",
     "size-limit": "^8.2.4",
-    "start-server-and-test": "^2.0.0"
+    "start-server-and-test": "^2.0.0",
+    "unist-util-visit": "^4.1.2"
   },
   "size-limit": [
     {
