Use package script for Changesets version step

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Create Release Pull Request
         uses: changesets/action@v1
         with:
-          version: pnpm changeset version && pnpm i --no-frozen-lockfile
+          version: pnpm version
           publish: pnpm changeset publish
           commit: '[ci] release'
           title: '[ci] release'
