--- a/docs-i18n-tracker/package.json
+++ b/docs-i18n-tracker/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "A single-page dashboard that tracks translation status across Starlight docs pages",
   "scripts": {
-    "build": "tsm --require=./scripts/lib/filter-warnings.cjs ./scripts/translation-status.ts"
+    "build": "tsm --require=./lib/filter-warnings.cjs ./build.ts"
   },
   "devDependencies": {
     "@types/html-escaper": "^3.0.0",
