--- a/docs/package.json
+++ b/docs/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@astrojs/starlight": "workspace:*",
     "astro": "^2.5.0",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "execa": "^7.1.1"
+    
   },
   "devDependencies": {
     "@size-limit/file": "^8.2.4",
