--- a/.github/workflows/congratsbot.yml
+++ b/.github/workflows/congratsbot.yml
@@ -13,4 +13,5 @@ jobs:
       COMMIT_AUTHOR: ${{ github.event.commits[0].author.name }}
       COMMIT_MESSAGE: ${{ github.event.commits[0].message }}
       COMMIT_ID: ${{ github.event.commits[0].id }}
+    secrets:
       DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_CONGRATS }}
