--- a/examples/basics/package.json
+++ b/examples/basics/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.4.1",
-    "astro": "^2.7.3",
+    "astro": "2.7.0",
     "sharp": "^0.32.1"
   }
 }
