--- a/packages/starlight/package.json
+++ b/packages/starlight/package.json
@@ -24,6 +24,7 @@
     "./components": "./components.ts",
     "./schema": "./schema.ts",
     "./types": "./types.ts",
+    "./tailwind": "./tailwind.ts",
     "./index.astro": "./index.astro",
     "./404.astro": "./404.astro"
   },
