--- a/packages/starlight/package.json
+++ b/packages/starlight/package.json
@@ -45,6 +45,7 @@
     "hastscript": "^7.2.0",
     "pagefind": "^1.0.0-alpha.5",
     "rehype": "^12.0.1",
+    "remark-code-title": "^0.2.5",
     "remark-directive": "^2.0.1",
     "unified": "^10.1.2",
     "unist-util-remove": "^3.1.1",
