--- a/docs/package.json
+++ b/docs/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "workspace:*",
-    "astro": "2.7.0",
+    "astro": "^2.8.5",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
