--- a/examples/basics/package.json
+++ b/examples/basics/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.5.3",
-    "astro": "2.7.0",
+    "astro": "^2.8.5",
     "sharp": "^0.32.1"
   }
 }
