--- a/docs/package.json
+++ b/docs/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@astrojs/starlight": "workspace:*",
-    "astro": "2.7.0",
-    "sharp": "^0.32.1"
+    "astro": "^2.8.5",
+    "sharp": "^0.32.3"
   },
   "devDependencies": {
     "@size-limit/file": "^8.2.4",
