--- a/packages/starlight/package.json
+++ b/packages/starlight/package.json
@@ -3,7 +3,8 @@
   "version": "0.5.5",
   "description": "Build beautiful, high-performance documentation websites with Astro",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage.enabled --coverage.all --coverage.reportsDirectory=./__coverage__"
   },
   "keywords": [
     "docs",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.16.19",
+    "@vitest/coverage-v8": "^0.33.0",
     "astro": "^2.8.5",
     "vitest": "^0.33.0"
   },
