Run coverage command in CI so we can catch when it falls

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - run: pnpm i
       - name: Test packages/starlight
         working-directory: ./packages/starlight
-        run: pnpm t
+        run: pnpm test:coverage
 
   pa11y:
     name: Check for accessibility issues
