add `.astro` and `__coverage__` to prettierignore
Signed-off-by: Lorenzo Lewis <lorenzo_lewis@icloud.com>

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,10 @@
 # Deep Directories
-**/dist
 **/node_modules
+
+# generated directories
+**/dist
+**/.astro
+**/__coverage__
 
 # Directories
 .github
