Apply suggestions from code review
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
   "waitFor": "postCreateCommand",
   "customizations": {
     "codespaces": {
-      "openFiles": ["README.md", "CONTRIBUTING.md"]
+      "openFiles": ["CONTRIBUTING.md"]
     },
     "vscode": {
       "extensions": ["astro-build.astro-vscode", "esbenp.prettier-vscode"]
