--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -12,11 +12,20 @@
   "bugs": "https://github.com/withastro/starlight/issues",
   "homepage": "https://starlight.astro.build",
   "type": "module",
+  "files": [
+    "index.ts"
+  ],
   "exports": {
     ".": "./index.ts"
   },
+  "scripts": {
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
+  },
   "devDependencies": {
-    "postcss": "^8.4.27"
+    "@vitest/coverage-v8": "^0.33.0",
+    "postcss": "^8.4.27",
+    "vitest": "^0.33.0"
   },
   "peerDependencies": {
     "@astrojs/starlight": "^0.6.1",
