--- a/examples/tailwind/package.json
+++ b/examples/tailwind/package.json
@@ -11,11 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.5.0",
+    "@astrojs/starlight": "^0.6.1",
     "@astrojs/starlight-tailwind": "^0.0.1",
     "@astrojs/tailwind": "^4.0.0",
-    "astro": "2.7.0",
-    "sharp": "^0.32.1",
-    "tailwindcss": "^3.0.24"
+    "astro": "^2.10.1",
+    "sharp": "^0.32.3",
+    "tailwindcss": "^3.3.3"
   }
 }
