Fix UI label and labeler

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -10,6 +10,7 @@ i18n:
   - docs/src/content/docs/it/**/*
   - docs/src/content/docs/ja/**/*
   - docs/src/content/docs/zh/**/*
+  - docs/src/content/docs/pt-br/**/*
 
 '🌟 core':
   - packages/starlight/**
