--- a/examples/tailwind/.gitignore
+++ b/examples/tailwind/.gitignore
@@ -1,3 +1,8 @@
+# build output
+dist/
+# generated types
+.astro/
+
 # dependencies
 node_modules/
 
@@ -7,12 +12,10 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
+
 # environment variables
 .env
 .env.production
 
 # macOS-specific files
 .DS_Store
-
-# Vitest
-__coverage__/
