--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "scripts": {
     "test": "start-server-and-test preview http://localhost:3000 pa11y",
-    "pa11y": "pa11y-ci --sitemap 'http://localhost:3000/sitemap-index.xml' --sitemap-find 'https://starlight.astro.build' --sitemap-replace 'http://localhost:3000'",
+    "pa11y": "pa11y-ci --sitemap 'http://localhost:3000/sitemap-index.xml' --sitemap-find 'https://starlight.astro.build' --sitemap-replace 'http://localhost:3000' --sitemap-exclude '/(de|zh|fr|es|pt-br|it)/.*'",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
