--- a/docs/package.json
+++ b/docs/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@astrojs/starlight": "workspace:*",
+    "@types/culori": "^2.0.0",
     "astro": "^2.10.4",
+    "culori": "^3.2.0",
     "sharp": "^0.32.3"
   },
   "devDependencies": {
