--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -28,7 +28,7 @@
     "vitest": "^0.33.0"
   },
   "peerDependencies": {
-    "@astrojs/starlight": "^0.7.0",
+    "@astrojs/starlight": ">=0.7.0",
     "@astrojs/tailwind": "^4.0.0",
     "tailwindcss": "^3.3.3"
   }
