--- a/docs/package.json
+++ b/docs/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "test": "start-server-and-test preview http://localhost:3000 pa11y",
-    "pa11y": "pa11y-ci --sitemap 'http://localhost:3000/sitemap-index.xml' --sitemap-find 'https://starlight.astro.build' --sitemap-replace 'http://localhost:3000' --sitemap-exclude '/(de|zh|fr|es|pt-br|it)/.*'",
+    "test": "start-server-and-test preview http://localhost:4321 pa11y",
+    "pa11y": "pa11y-ci --sitemap 'http://localhost:4321/sitemap-index.xml' --sitemap-find 'https://starlight.astro.build' --sitemap-replace 'http://localhost:4321' --sitemap-exclude '/(de|zh|fr|es|pt-br|it|ko)/.*'",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
@@ -15,9 +15,9 @@
   "dependencies": {
     "@astrojs/starlight": "workspace:*",
     "@types/culori": "^2.0.0",
-    "astro": "^2.10.5",
+    "astro": "^3.0.6",
     "culori": "^3.2.0",
-    "sharp": "^0.32.3"
+    "sharp": "^0.32.5"
   },
   "devDependencies": {
     "hast-util-from-html": "^1.0.2",
