--- a/packages/starlight/package.json
+++ b/packages/starlight/package.json
@@ -4,7 +4,8 @@
   "description": "Build beautiful, high-performance documentation websites with Astro",
   "scripts": {
     "test": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright install --with-deps chromium && playwright test"
   },
   "keywords": [
     "docs",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.16.19",
+    "@playwright/test": "^1.37.1",
     "@vitest/coverage-v8": "^0.33.0",
     "astro": "^3.0.6",
     "vitest": "^0.33.0"
