--- a/packages/starlight/package.json
+++ b/packages/starlight/package.json
@@ -28,6 +28,7 @@
     "./components": "./components.ts",
     "./schema": "./schema.ts",
     "./types": "./types.ts",
+    "./expressive-code": "./integrations/expressive-code.ts",
     "./index.astro": "./index.astro",
     "./404.astro": "./404.astro"
   },
@@ -45,6 +46,7 @@
     "@astrojs/sitemap": "^3.0.0",
     "@pagefind/default-ui": "^1.0.3",
     "@types/mdast": "^3.0.11",
+    "astro-expressive-code": "^0.25.0",
     "bcp-47": "^2.1.0",
     "execa": "^7.1.1",
     "hast-util-select": "^5.0.5",
