--- a/docs/package.json
+++ b/docs/package.json
@@ -13,7 +13,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.10.2",
+    "@astrojs/starlight": "workspace:*",
     "@types/culori": "^2.0.0",
     "astro": "^3.0.6",
     "culori": "^3.2.0",
