Test `routes` config

--- a/docs/vercel.json
+++ b/docs/vercel.json
@@ -1,18 +1,8 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "cleanUrls": true,
-  "trailingSlash": true,
-  "redirects": [
-    {
-      "source": "/:lang/(.*)/",
-      "destination": "/:lang/404/",
-      "statusCode": 404
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/ph/:path*/",
-      "destination": "https://astro-houston-ph.pages.dev/ph/:path*/"
-    }
+  
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/de/(.*)", "status": 404, "dest": "/de/404.html" }
   ]
 }
