--- a/packages/starlight/package.json
+++ b/packages/starlight/package.json
@@ -26,7 +26,134 @@
   "exports": {
     ".": "./index.ts",
     "./components": "./components.ts",
-    "./components/*": "./components/*",
+    "./components/Badge.astro": {
+      "types": "./components/Badge.astro.tsx",
+      "import": "./components/Badge.astro"
+    },
+    "./components/LanguageSelect.astro": {
+      "types": "./components/LanguageSelect.astro.tsx",
+      "import": "./components/LanguageSelect.astro"
+    },
+    "./components/Select.astro": {
+      "types": "./components/Select.astro.tsx",
+      "import": "./components/Select.astro"
+    },
+    "./components/Banner.astro": {
+      "types": "./components/Banner.astro.tsx",
+      "import": "./components/Banner.astro"
+    },
+    "./components/LastUpdated.astro": {
+      "types": "./components/LastUpdated.astro.tsx",
+      "import": "./components/LastUpdated.astro"
+    },
+    "./components/Sidebar.astro": {
+      "types": "./components/Sidebar.astro.tsx",
+      "import": "./components/Sidebar.astro"
+    },
+    "./components/CallToAction.astro": {
+      "types": "./components/CallToAction.astro.tsx",
+      "import": "./components/CallToAction.astro"
+    },
+    "./components/MarkdownContent.astro": {
+      "types": "./components/MarkdownContent.astro.tsx",
+      "import": "./components/MarkdownContent.astro"
+    },
+    "./components/SidebarSublist.astro": {
+      "types": "./components/SidebarSublist.astro.tsx",
+      "import": "./components/SidebarSublist.astro"
+    },
+    "./components/ContentPanel.astro": {
+      "types": "./components/ContentPanel.astro.tsx",
+      "import": "./components/ContentPanel.astro"
+    },
+    "./components/MobileMenuFooter.astro": {
+      "types": "./components/MobileMenuFooter.astro.tsx",
+      "import": "./components/MobileMenuFooter.astro"
+    },
+    "./components/SiteTitle.astro": {
+      "types": "./components/SiteTitle.astro.tsx",
+      "import": "./components/SiteTitle.astro"
+    },
+    "./components/EditLink.astro": {
+      "types": "./components/EditLink.astro.tsx",
+      "import": "./components/EditLink.astro"
+    },
+    "./components/MobileMenuToggle.astro": {
+      "types": "./components/MobileMenuToggle.astro.tsx",
+      "import": "./components/MobileMenuToggle.astro"
+    },
+    "./components/SkipLink.astro": {
+      "types": "./components/SkipLink.astro.tsx",
+      "import": "./components/SkipLink.astro"
+    },
+    "./components/MobileTableOfContents.astro": {
+      "types": "./components/MobileTableOfContents.astro.tsx",
+      "import": "./components/MobileTableOfContents.astro"
+    },
+    "./components/SocialIcons.astro": {
+      "types": "./components/SocialIcons.astro.tsx",
+      "import": "./components/SocialIcons.astro"
+    },
+    "./components/FallbackContentNotice.astro": {
+      "types": "./components/FallbackContentNotice.astro.tsx",
+      "import": "./components/FallbackContentNotice.astro"
+    },
+    "./components/Page.astro": {
+      "types": "./components/Page.astro.tsx",
+      "import": "./components/Page.astro"
+    },
+    "./components/Footer.astro": {
+      "types": "./components/Footer.astro.tsx",
+      "import": "./components/Footer.astro"
+    },
+    "./components/PageFrame.astro": {
+      "types": "./components/PageFrame.astro.tsx",
+      "import": "./components/PageFrame.astro"
+    },
+    "./components/TableOfContents.astro": {
+      "types": "./components/TableOfContents.astro.tsx",
+      "import": "./components/TableOfContents.astro"
+    },
+    "./components/Head.astro": {
+      "types": "./components/Head.astro.tsx",
+      "import": "./components/Head.astro"
+    },
+    "./components/PageSidebar.astro": {
+      "types": "./components/PageSidebar.astro.tsx",
+      "import": "./components/PageSidebar.astro"
+    },
+    "./components/ThemeProvider.astro": {
+      "types": "./components/ThemeProvider.astro.tsx",
+      "import": "./components/ThemeProvider.astro"
+    },
+    "./components/Header.astro": {
+      "types": "./components/Header.astro.tsx",
+      "import": "./components/Header.astro"
+    },
+    "./components/PageTitle.astro": {
+      "types": "./components/PageTitle.astro.tsx",
+      "import": "./components/PageTitle.astro"
+    },
+    "./components/ThemeSelect.astro": {
+      "types": "./components/ThemeSelect.astro.tsx",
+      "import": "./components/ThemeSelect.astro"
+    },
+    "./components/Hero.astro": {
+      "types": "./components/Hero.astro.tsx",
+      "import": "./components/Hero.astro"
+    },
+    "./components/Pagination.astro": {
+      "types": "./components/Pagination.astro.tsx",
+      "import": "./components/Pagination.astro"
+    },
+    "./components/TwoColumnContent.astro": {
+      "types": "./components/TwoColumnContent.astro.tsx",
+      "import": "./components/TwoColumnContent.astro"
+    },
+    "./components/Search.astro": {
+      "types": "./components/Search.astro.tsx",
+      "import": "./components/Search.astro"
+    },
     "./props": "./props.ts",
     "./schema": "./schema.ts",
     "./types": "./types.ts",
