--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "workspace:*",
+    "@astrojs/starlight-search-demo": "workspace:*",
     "@types/culori": "^2.0.0",
     "astro": "^3.2.3",
     "culori": "^3.2.0",
