Use GitHub Discussions for feature requests (#945)

--- a/.github/DISCUSSION_TEMPLATE/feature-requests.yml
+++ b/.github/DISCUSSION_TEMPLATE/feature-requests.yml
@@ -1,7 +1,3 @@
-name: Feature Request
-description: Suggest an improvement you’d like to see added to Starlight
-labels: []
-assignees: []
 body:
   - type: markdown
     attributes:
@@ -46,5 +42,5 @@ body:
       label: Participation
       description: Let us know if your interested in contributing this feature yourself.
       options:
-        - label: I am willing to submit a pull request for this issue.
+        - label: I am willing to submit a pull request for this feature.
           required: false
