chore: add preact to the demo

--- a/packages/starlight-search-demo/package.json
+++ b/packages/starlight-search-demo/package.json
@@ -18,6 +18,8 @@
     "./overrides/Search.astro": "./overrides/Search.astro"
   },
   "peerDependencies": {
-    "@astrojs/starlight": ">=0.11.1"
+    "@astrojs/preact": ">=3",
+    "@astrojs/starlight": ">=0.11.1",
+    "preact": ">=10"
   }
 }
