Explicitly set 404 status

--- a/docs/vercel.json
+++ b/docs/vercel.json
@@ -14,7 +14,8 @@
     },
     {
       "src": "/(?<lang>[^/]*)/(.*)",
-      "dest": "/$lang/404"
+      "dest": "/$lang/404",
+      "status": 404
     }
   ]
 }
