Add zh => zh-cn redirect

--- a/docs/vercel.json
+++ b/docs/vercel.json
@@ -13,6 +13,11 @@
       "handle": "filesystem"
     },
     {
+      "src": "/zh/(.*)",
+      "dest": "/zh-cn/$1",
+      "status": 301
+    },
+    {
       "src": "/(?<lang>[^/]*)/(.*)",
       "dest": "/$lang/404",
       "status": 404
