--- a/docs/vercel.json
+++ b/docs/vercel.json
@@ -7,7 +7,7 @@
       "headers": { "cache-control": "public, max-age=31536000, immutable" },
       "continue": true
     },
-    { "src": "/ph/(.*)", "dest": "https://astro-houston-ph.pages.dev/ph/$1" },
+    { "src": "/(ph$|ph/)(.*)", "dest": "https://astro-houston-ph.pages.dev/ph/$2" },
     { "handle": "filesystem" },
     { "src": "/zh/(.*)", "dest": "/zh-cn/$1", "status": 301 },
     { "src": "/(?<lang>[^/]*)/(.*)", "dest": "/$lang/404", "status": 404 }
