Also redirect from `/index.html` to `/`

--- a/docs/vercel.json
+++ b/docs/vercel.json
@@ -8,8 +8,12 @@
       "continue": true
     },
     { "src": "/(ph$|ph/)(.*)", "dest": "https://astro-houston-ph.pages.dev/ph/$2" },
+
     { "src": "(.*)/([^./]+)$", "dest": "$1/$2/", "status": 301 },
+    { "src": "(.*)/index.html$", "dest": "$1/", "status": 301 },
+
     { "handle": "filesystem" },
+
     { "src": "/zh/(.*)", "dest": "/zh-cn/$1", "status": 301 },
     { "src": "/(?<lang>[^/]*)/(.*)", "dest": "/$lang/404/", "status": 404 }
   ]
