--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -15,6 +15,7 @@ i18n:
   - docs/src/content/docs/ru/**/*
   - docs/src/content/docs/id/**/*
   - docs/src/content/docs/tr/**/*
+  - docs/src/content/docs/hi/**/*
 
 '🌟 core':
   - packages/starlight/**
