Install dependencies when running size-limit workflow on forks

--- a/.github/workflows/size-limit.yml
+++ b/.github/workflows/size-limit.yml
@@ -19,6 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v2
+      - run: pnpm i
       - run: 'pnpm build:examples'
       - run: pnpm size
 
