--- a/docs/package.json
+++ b/docs/package.json
@@ -17,7 +17,8 @@
     "@types/culori": "^2.0.0",
     "astro": "^3.2.3",
     "culori": "^3.2.0",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "virtual-pages-demo": "workspace:*"
   },
   "devDependencies": {
     "hast-util-from-html": "^1.0.2",
