--- a/packages/starlight/package.json
+++ b/packages/starlight/package.json
@@ -102,6 +102,10 @@
       "types": "./components/Page.astro.tsx",
       "import": "./components/Page.astro"
     },
+    "./components/VirtualPage.astro": {
+      "types": "./components/VirtualPage.astro.tsx",
+      "import": "./components/VirtualPage.astro"
+    },
     "./components/Footer.astro": {
       "types": "./components/Footer.astro.tsx",
       "import": "./components/Footer.astro"
