--- a/packages/starlight/package.json
+++ b/packages/starlight/package.json
@@ -182,6 +182,7 @@
     "execa": "^8.0.1",
     "hast-util-select": "^6.0.2",
     "hastscript": "^8.0.0",
+    "mdast-util-directive": "^3.0.0",
     "pagefind": "^1.0.3",
     "rehype": "^13.0.1",
     "remark-directive": "^3.0.0",
