--- a/packages/starlight/package.json
+++ b/packages/starlight/package.json
@@ -176,6 +176,7 @@
     "@astrojs/mdx": "^2.0.0",
     "@astrojs/sitemap": "^3.0.3",
     "@pagefind/default-ui": "^1.0.3",
+    "@types/hast": "^3.0.3",
     "@types/mdast": "^4.0.3",
     "astro-expressive-code": "^0.29.3",
     "bcp-47": "^2.1.0",
