Make pagefind work with SSR

--- a/packages/starlight/package.json
+++ b/packages/starlight/package.json
@@ -161,6 +161,7 @@
     "./index.astro": "./index.astro",
     "./indexSSR.astro": "./indexSSR.astro",
     "./404.astro": "./404.astro",
+    "./pagefind.ts": "./pagefind.ts",
     "./style/markdown.css": "./style/markdown.css"
   },
   "peerDependencies": {
