chore: add da to labeler.yml config

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -16,6 +16,7 @@ i18n:
   - docs/src/content/docs/id/**/*
   - docs/src/content/docs/tr/**/*
   - docs/src/content/docs/hi/**/*
+  - docs/src/content/docs/da/**/*
 
 '🌟 core':
   - packages/starlight/**
