--- a/packages/starlight/package.json
+++ b/packages/starlight/package.json
@@ -181,6 +181,7 @@
     "astro-expressive-code": "^0.30.1",
     "bcp-47": "^2.1.0",
     "execa": "^8.0.1",
+    "hast-util-from-html": "^2.0.1",
     "hast-util-select": "^6.0.2",
     "hast-util-to-string": "^3.0.0",
     "hastscript": "^8.0.0",
